Fix script, download csv, hardcode logs path

--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -6,4 +6,4 @@ services:
     - broker
     env_file: .env.producer
     volumes:
-    - ${PRODUCER_LOGS_DATA}:/data
+    - ~/deathlockers/logs:/data
