add web as CQRS

--- a/api/.env.api
+++ b/api/.env.api
@@ -19,6 +19,6 @@ MARIADB_DATABASE=${DB_DATABASE}
 MARIADB_ROOT_PASSWORD=${DB_PASSWORD}
 
 # CORS
-DOMAINS_ORIGINS_LIST="http://localhost:9000,http://127.0.0.1:9000"
+DOMAINS_ORIGINS_LIST="http://localhost:9000,http://127.0.0.1:9000,http://web:9000"
 
 KAFKA_HOST=broker:9093
