--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -16,5 +16,10 @@ services:
     env_file: .env.api
     volumes:
       - db-data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 volumes:
   db-data:
