--- a/web/.env.web
+++ b/web/.env.web
@@ -1,2 +1,2 @@
-APP_AXIOS_BASEURL="http://127.0.0.1:8000"
-APP_WS_BASEURL="ws://127.0.0.1:8000"
+APP_AXIOS_BASEURL="http://<host>:8000"
+APP_WS_BASEURL="ws://<host>:8000"
