--- a/env_files/.env.kafka-ui
+++ b/env_files/.env.kafka-ui
@@ -1,4 +1,4 @@
 
-DYNAMIC_CONFIG_ENABLED: "true"
-KAFKA_CLUSTERS_0_NAME: "aws-kafka"
-KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS: "broker:9093"
+DYNAMIC_CONFIG_ENABLED="true"
+KAFKA_CLUSTERS_0_NAME="aws-kafka"
+KAFKA_CLUSTERS_0_BOOTSTRAP_SERVERS="broker:9093"
