--- a/env_files/.env.web
+++ b/env_files/.env.web
@@ -1,2 +1,3 @@
-APP_AXIOS_BASEURL="http://api:8000"
-APP_WS_BASEURL="ws://api:8000"
+APP_AXIOS_BASEURL="http://<host>:8000"
+APP_WS_BASEURL="ws://<host>:8000"
+ENV_MODE="prod"
